# tp808

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
EasyToolsAndroid/src/androidTest/java/com/arvin/easytoolsandroid/: ExampleInstrumentedTest.java
EasyToolsAndroid/src/main/: AndroidManifest.xml
EasyToolsAndroid/src/main/res/values/: strings.xml
EasyToolsAndroid/src/test/java/com/arvin/easytoolsandroid/: ExampleUnitTest.java
EasyToolsJava/src/main/java/pers/arvin/easytoolsjava/: EasyToolsJava.java
Live/src/main/: AndroidManifest.xml
Live/src/main/java/com/frank/live/: LiveApplication.java  LivePusherNew.java
app/: build.gradle
app/libs/: usagreement-debug.aar  usagreement-debug1.aar  usagreement-debug2.aar  usagreement-debug3.aar  usagreement-debug4.aar  usagreement-debug5.aar  usagreement-debug5f.aar  usagreement-release.aar  usagreement.aar  usagreement6.aar  voicelib-debug.aar  voicelib-debug1.aar  voicelib-release1.aar  voicelib-release2.aar  voicelib.aar
app/src/main/: AndroidManifest.xml
app/src/main/java/cn/com/erayton/: MyApplication.java
app/src/main/jniLibs/arm64-v8a/: convert
app/src/main/jniLibs/armeabi/: convert
app/src/main/res/layout/: activity_float_window_main.xml  activity_live.xml  activity_main.xml  activity_main2.xml  activity_main_testmp3.xml  activity_main_video.xml  activity_recive.xml  activity_recive_ready.xml  activity_send.xml  activity_send_ready.xml  activity_voice_recive_ready.xml  activity_voice_send.xml  activity_voice_send_ready.xml  content_main_testmp3.xml  float_layout.xml
app/src/main/res/values/: strings.xml
cameratest/: build.gradle
cameratest/src/androidTest/java/cn/erayton/cameratest/: ExampleInstrumentedTest.java
cameratest/src/androidTest/java/com/rayton/camera2/: ExampleInstrumentedTest.java
cameratest/src/main/: AndroidManifest.xml
cameratest/src/main/java/cn/erayton/cameratest/: CameraActivity.java  CameraApp.java  Config.java  MainActivity.java
cameratest/src/main/java/cn/rayton/camera2/: CameraActivity.java  CameraApp.java  Config.java
cameratest/src/main/res/layout/: activity_main.xml  camera_bottom_controls.xml  camera_cover_layout.xml  camera_fragment_layout.xml  cover_view.xml  module_dual_camera_layout.xml  module_photo_layout.xml  module_professional_layout.xml  module_video_layout.xml
cameratest/src/main/res/layout-small/: camera_bottom_controls.xml
cameratest/src/main/res/values/: colors.xml  strings.xml  styles.xml
cameratest/src/main/res/xml/: menu_preference.xml  module_preference.xml
cameratest/src/main/res/xml-v25/: shortcuts.xml
cameratest/src/test/java/cn/erayton/cameratest/: ExampleUnitTest.java
cameratest/src/test/java/com/rayton/camera2/: ExampleUnitTest.java
easytoolsandroid/src/androidTest/java/cn/erayton/easytoolsandroid/: ExampleInstrumentedTest.java
easytoolsandroid/src/main/: AndroidManifest.xml
ffmpeglib/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
jt/: 协议情况.md
mediaplayertest/: build.gradle
mediaplayertest/src/main/: AndroidManifest.xml
mediaplayertest/src/main/res/layout/: activity_main.xml
netstatelib/: build.gradle  proguard-rules.pro  proguardMapping.txt
netstatelib/src/main/: AndroidManifest.xml
netstatelib/src/main/res/values/: strings.xml
tts/: build.gradle
tts/src/main/: AndroidManifest.xml
tts/src/main/assets/: auth.properties
usagreement/: CMakeLists.txt  build.gradle  proguard-rules.pro  proguardMapping.txt
usagreement/libs/: usagreement-zjx-9.aar
usagreement/src/main/: AndroidManifest.xml
usagreement/src/main/cpp/: audio.cpp
usagreement/src/main/jniLibs/x86/: convert
usagreement/src/main/res/layout/: activity_main.xml  view_float_video.xml
usagreement/src/main/res/values/: colors.xml  dimens.xml  strings.xml
usprotocol/: build.gradle
usprotocol/src/main/: AndroidManifest.xml
usprotocol/src/main/res/values/: strings.xml
videolib/: CMakeLists.txt  build.gradle
videolib/src/androidTest/java/cn/erayton/videolib/: ExampleInstrumentedTest.java
videolib/src/androidTest/java/net/rayton/videolib/: ExampleInstrumentedTest.java
videolib/src/main/: AndroidManifest.xml
videolib/src/main/cpp/: video-utils.cpp  video_uils.cpp  video_uils.h  yuvutil.cpp
videolib/src/main/java/cn/erayton/videolib/: test.java
videolib/src/main/java/cn/erayton/videolib/utils/: VideoLib.java
videolib/src/main/java/net/rayton/videolib/: YUVUtils.java
videolib/src/test/java/cn/erayton/videolib/: ExampleUnitTest.java
videolib/src/test/java/net/rayton/videolib/: ExampleUnitTest.java
voicelib/: CMakeLists.txt  build.gradle
voicelib/src/main/: AndroidManifest.xml
voicelib/src/main/cpp/: lame-utils.cpp
voicelib/src/main/cpp/libmp3lame/: VbrTag.c  id3tag.c  set_get.h  util.h
voicelib/src/main/res/values/: strings.xml
(+337 files in other folders)
